| Bug #40308 | multi-thread test from pushbuild 2 hang in page cache | ||
|---|---|---|---|
| Submitted: | 24 Oct 2008 14:02 | Modified: | 8 Jan 2009 10:37 |
| Reporter: | Oleksandr Byelkin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Maria storage engine | Severity: | S1 (Critical) |
| Version: | 5.1-maria, 6.0-bzr | OS: | Any |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[24 Oct 2008 14:02]
Oleksandr Byelkin
[28 Oct 2008 12:07]
Oleksandr Byelkin
The same with BUG#39446
[15 Dec 2008 10:08]
Bugs System
Pushed into 6.0.9-alpha (revid:sanja@sun.com-20081112220618-qmrxoacwdi21v8ob) (version source revid:guilhem@mysql.com-20081213204800-0nubni3t4ihn4hv9) (pib:5)
[8 Jan 2009 10:37]
MC Brown
Internal change only. No documentation needed.
