Added correct reaction on find operation status during writing the page. (BUG#40308)

storage/maria/ma_pagecache.c:
  Added correct reaction on find operation status during writing the page.